--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -249,7 +249,195 @@
       "lat": 34.97282277547203,
       "lng": 36.00218872578407,
       "type": "castle"
-    }
+    }, {
+      "id": 22,
+      "name": "قلعة إيبلا",
+      "lat": 35.799005253573206,
+      "lng": 36.7987933611615,
+      "type": "castle"
+  },
+  {
+      "id": 23,
+      "name": "قلب لوزة",
+      "lat": 36.16954594117208,
+      "lng": 36.58073906585107,
+      "type": "churches"
+  },
+  {
+      "id": 24,
+      "name": "قلعة حارم",
+      "lat": 36.207657204602704,
+      "lng": 36.51924352428139,
+      "type": "castle"
+  },
+  {
+      "id": 25,
+      "name": "نواعير حماة",
+      "lat": 35.135321697001615,
+      "lng": 36.75306386770207,
+      "type": "castle"
+  },
+  {
+      "id": 26,
+      "name": "قصر العظم",
+      "lat": 35.134141872911925,
+      "lng": 36.75358913607538,
+      "type": "castle"
+  },
+  {
+      "id": 27,
+      "name": "أفاميا",
+      "lat": 35.42060735407328,
+      "lng": 36.401314600782364,
+      "type": "castle"
+  },
+  {
+      "id": 28,
+      "name": "قلعة ابن وردان",
+      "lat": 35.3734870474216,
+      "lng": 37.24743453313277,
+      "type": "castle"
+  },
+  {
+      "id": 29,
+      "name": "قلعة شيزر",
+      "lat": 35.26544453175708,
+      "lng": 36.56634729674215,
+      "type": "castle"
+  },
+  {
+      "id": 30,
+      "name": "قلعة مصياف",
+      "lat": 35.06613540565015,
+      "lng": 36.3431790516586,
+      "type": "castle"
+  },
+  {
+      "id": 31,
+      "name": "قلعة جعبر",
+      "lat": 35.89730702368276,
+      "lng": 38.48119139676328,
+      "type": "castle"
+  },
+  {
+      "id": 32,
+      "name": "الرصافة",
+      "lat": 35.6280013152059,
+      "lng": 38.758095952821066,
+      "type": "castle"
+  },
+  {
+      "id": 33,
+      "name": "باب بغداد",
+      "lat": 35.94315136290065,
+      "lng": 39.02717783775936,
+      "type": "castle"
+  },
+  {
+      "id": 34,
+      "name": "قصر البنات",
+      "lat": 35.948242631100236,
+      "lng": 39.026200084170114,
+      "type": "castle"
+  },
+  {
+      "id": 35,
+      "name": "مملكة ماري",
+      "lat": 34.54951443186663,
+      "lng": 40.890004703930664,
+      "type": "castle"
+  },
+  {
+      "id": 36,
+      "name": "دورا أوروبوس",
+      "lat": 34.74918732025183,
+      "lng": 40.72983981001128,
+      "type": "castle"
+  },
+  {
+      "id": 37,
+      "name": "حلبية",
+      "lat": 35.68954415142649,
+      "lng": 39.822449750657285,
+      "type": "castle"
+  },
+  {
+      "id": 38,
+      "name": "قلعة الرحبة",
+      "lat": 35.005266873596256,
+      "lng": 40.42291244741592,
+      "type": "castle"
+  },
+  {
+      "id": 39,
+      "name": "الجامع الأموي",
+      "lat": 33.51162649128323,
+      "lng": 36.306557835412086,
+      "type": "mosque"
+  },
+  {
+      "id": 40,
+      "name": "قلعة دمشق",
+      "lat": 33.51158999055032,
+      "lng": 36.30114523201926,
+      "type": "castle"
+  },
+  {
+      "id": 41,
+      "name": "قصر العظم",
+      "lat": 33.51027741722308,
+      "lng": 36.306663219208616,
+      "type": "castle"
+  },
+  {
+      "id": 42,
+      "name": "كنيسة حنانيا",
+      "lat": 33.51133108408951,
+      "lng": 36.31756248220886,
+      "type": "churches"
+  },
+  {
+      "id": 43,
+      "name": "دير القديسة تقلا",
+      "lat": 33.847318136482016,
+      "lng": 36.54672378239586,
+      "type": "churches"
+  },
+  {
+      "id": 44,
+      "name": "دير مار موسى الحبشي",
+      "lat": 34.02186819224202,
+      "lng": 36.84235035825749,
+      "type": "churches"
+  },
+  {
+      "id": 45,
+      "name": "مسرح بصرى الروماني",
+      "lat": 32.51775603107656,
+      "lng": 36.48138068632501,
+      "type": "castle"
+  },
+  {
+      "id": 46,
+      "name": "مسرح شهبا",
+      "lat": 32.853762922757724,
+      "lng": 36.62685188579836,
+      "type": "castle"
+  }, {
+    "id": 47,
+    "name": "قلعة شهبا",
+    "lat": 32.850968897248116,
+    "lng": 36.62073644961626,
+    "type": "castle"
+  }
+  ,
+  {
+    "id": 48,
+    "name": "قلعة صلخد",
+    "lat": 32.494268483741195,
+    "lng": 36.710380778745225,
+    "type": "castle"
+  }
   ],
   "StateInfo": [
     {
